gün7: some development environment settings done